@@ -52,8 +52,6 @@ enum
 GtkWidget*	proctable_new (ProcData *data) G_GNUC_INTERNAL;
 void		proctable_update_table (ProcData *data) G_GNUC_INTERNAL;
 void		proctable_update_list (ProcData *data) G_GNUC_INTERNAL;
-void		insert_info_to_tree (ProcInfo *info, ProcData *procdata) G_GNUC_INTERNAL;
-void		remove_info_from_tree (ProcInfo *info, ProcData *procdata) G_GNUC_INTERNAL;
 void		proctable_update_all (ProcData *data) G_GNUC_INTERNAL;
 void		proctable_clear_tree (ProcData *data) G_GNUC_INTERNAL;
 void		proctable_free_table (ProcData *data) G_GNUC_INTERNAL;
