@@ -1,3 +1,15 @@
+2007-04-23  Benoît Dejean  <benoit@placenet.org>
+
+	* src/procman.h:
+	* src/proctable.cpp:
+	* src/proctable.h:
+	* src/util.h:
+	
+	Huge rewrite of the dependencies tree.
+	It needs a lot of testing but it is definitely sanier than the
+	previous code. I worked on it all the weekend and it is really
+	to have a working and moving dependency tree.
+
 2007-04-21  Benoît Dejean  <benoit@placenet.org>
 
 	* src/util.cpp:
